# arduino_robot_arm

./: README.md
arduino_code/: arduino_code.ino
moveit_pkg/: CMakeLists.txt  package.xml
moveit_pkg/config/: arduino_robot_arm.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
moveit_pkg/launch/: arduino_robot_arm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_pkg/scripts/: color_thresholding.py  get_pose_openCV.py
moveit_pkg/src/: move_group_interface.cpp
robot_arm_pkg/: CMakeLists.txt  package.xml
robot_arm_pkg/config/: ros_controllers.yaml
robot_arm_pkg/launch/: check_motors.launch  check_motors_gazebo.launch  config.rviz  gazebo_urdf.launch  rviz_urdf.launch  urdf_config.rviz
robot_arm_pkg/meshes/stl/: Arm 01.stl  Arm 02.stl  Base.stl  Gripper.001.stl  Gripper.stl  Waist.001.stl  Waist.stl
robot_arm_pkg/scripts/: joint_states_to_gazebo.py
robot_arm_pkg/urdf/: arduino_robot_arm.urdf
